--- a/DSClient/pom.xml
+++ b/DSClient/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pl.edu.agh.ftj</groupId>
-    <artifactId>DSclient</artifactId>
+    <artifactId>DSClient</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>DSclient</name>
+    <name>DSClient</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
