--- a/Visualisation/Wiz/Wiz.csproj
+++ b/Visualisation/Wiz/Wiz.csproj
@@ -108,7 +108,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="clientaccesspolicy.xml" />
-    <Content Include="crossdomain.xml" />
+    <Content Include="crossdomain.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
